[gd_scene load_steps=6 format=2]

[ext_resource path="res://assests/board.png" type="Texture" id=1]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/move.wav" type="AudioStream" id=3]
[ext_resource path="res://Board.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.6, 16.3466 )

[node name="Board" type="Node2D"]
position = Vector2( -5.65686, 1.41425 )
scale = Vector2( 0.814946, 0.71172 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 300.868, 500 )
scale = Vector2( 0.555084, 0.55 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area1" type="Area2D" parent="."]
position = Vector2( 108.894, 304.056 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area1"]

[node name="Area2" type="Area2D" parent="."]
position = Vector2( 299.813, 305.47 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2"]

[node name="Area3" type="Area2D" parent="."]
position = Vector2( 493.561, 306.884 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area3"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area3"]

[node name="Area4" type="Area2D" parent="."]
position = Vector2( 103.238, 496.389 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area4"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area4"]

[node name="Area5" type="Area2D" parent="."]
position = Vector2( 298.399, 497.803 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area5"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area5"]

[node name="Area6" type="Area2D" parent="."]
position = Vector2( 487.904, 493.561 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area6"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area6"]

[node name="Area7" type="Area2D" parent="."]
position = Vector2( 104.652, 692.965 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area7"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area7"]

[node name="Area8" type="Area2D" parent="."]
position = Vector2( 301.227, 692.965 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area8"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area8"]

[node name="Area9" type="Area2D" parent="."]
position = Vector2( 491, 692 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area9"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area9"]

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="Movesound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="input_event" from="Area1" to="." method="_on_Area1_input_event"]
[connection signal="input_event" from="Area2" to="." method="_on_Area2_input_event"]
[connection signal="input_event" from="Area3" to="." method="_on_Area3_input_event"]
[connection signal="input_event" from="Area4" to="." method="_on_Area4_input_event"]
[connection signal="input_event" from="Area5" to="." method="_on_Area5_input_event"]
[connection signal="input_event" from="Area6" to="." method="_on_Area6_input_event"]
[connection signal="input_event" from="Area7" to="." method="_on_Area7_input_event"]
[connection signal="input_event" from="Area8" to="." method="_on_Area8_input_event"]
[connection signal="input_event" from="Area9" to="." method="_on_Area9_input_event"]
[connection signal="play_again" from="Menu" to="." method="_on_Menu_play_again"]
